starting the api

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Anime-Ville</title>
   </head>
   <body>
-    <div id="app"></div>
+    <nav>
+      <h1>Anime-Ville</h1>
+      <div id="search-bar">
+        <label for="search-input">Search</label>
+        <input type="text" name="search-input" id="search-input" />
+        <button>GO</button>
+      </div>
+    </nav>
+    <main>
+      <div id="app"></div>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
