--- a/src/componets/stuff.html
+++ b/src/componets/stuff.html
@@ -7,17 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="anime-details" >
-        <h2>Title</h2>
-        im
-        <p class="info">Other names: stuff</p>
-        <p class="info">Type: stuff</p>
-        <p class="info">Released date: stuff</p>
-        <p class="info">Status: stuff</p>
-        <p class="info">Total Episodes: stuff</p>
-        <div class="genres"></div>
-        <p class="synopsis"></p>
-        <div class="episodes"></div>
-    </section>
+    <div class="new-episode-item">
+        <a href="#">
+            <h3>{title}- {episode-number}</h3>
+        </a>
+        <div class="new-ep-img">
+            <img src="#" alt="" width="150">
+        </div>
+    </div>
 </body>
 </html>
