--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <nav>
-      <h1>Anime-Ville</h1>
-      <div id="search-bar">
+      <div id="home">
+        <h1>Anime-Ville</h1>
+      </div>
+      <div id="search-bar" >
         <label for="search-input">Search</label>
         <input type="text" name="search-input" id="search-input" />
-        <button>GO</button>
+        <button id="search-btn" >GO</button>
       </div>
     </nav>
     <main>
